# task_for_new

./: .gitignore  ReadMe.md  processing_status.py  Пояснения по выполнению тестового задания.txt
unit_test/: CMakeLists.txt
unit_test/include/testy/: func.h  func_cust.h
unit_test/src/: main.c
unit_test/tests/: test_main.cpp
